apps/robocook/client-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robocook-client
  labels:
    app.kubernetes.io/name: robocook-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: robocook-client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: robocook-client
    spec:
      containers:
      - name: main
        image: docker.io/tintinho/robocook-client:60826e1
        ports:
        - containerPort: 5657
