apps/robocook/server-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robocook-server
  labels:
    app.kubernetes.io/name: robocook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: robocook-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: robocook-server
    spec:
      containers:
      - name: main
        image: docker.io/tintinho/robocook-server:60826e1
        ports:
        - containerPort: 5657
