apps/robocook/server-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: robocook-server
spec:
  selector:
    app.kubernetes.io/name: robocook-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5657
  type: ClusterIP
